--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                 <h5 class="card-title">{{fundraising.title}}</h5>
                 <p class="card-text">{{fundraising.details}}</p>
                 <h6>goal: {{fundraising.amount_goal}}</h6>
-                <a [routerLink]="" class="stretched-link" (click)="onSelect(fundraising._id)"></a>
+                <a [routerLink]="[]" class="stretched-link" (click)="onSelect(fundraising._id)"></a>
             </div>
         </div>
     </div>
