--- a/src/app/myprofile/mypage/mypage.component.html
+++ b/src/app/myprofile/mypage/mypage.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="container-xl mt-3 mb-5 pb-3 py-2 shadow-lg rounded">
-    <img src="assets/mypage_example.png" class="shadow-lg rounded-circle mx-auto d-block mt-5 mb-5" width="200px" alt="User photo">
-    <h3 class="pb-5 display" style="text-align: center">{{userData.firstname}} {{userData.lastname}}</h3>
+    <img class="shadow-lg rounded-circle mx-auto my-auto d-block mb-5" width="175px" height="175px" src="{{userData.imagePath}}">
+    <h3 class=" mt-3 pb-5 display" style="text-align: center">{{userData.firstname}} {{userData.lastname}}</h3>
     <div class="rounded pt-4 pb-4 shadow-sm" style="background-color: #E9E9E9">
       <div class="row">
         <div class="col text-center">
@@ -33,10 +33,7 @@
       <table class="table table-hover rounded shadow-sm" style="background-color: #E5E5E5; width: 500px">
         <tbody>
         <tr>
-          <td><p class="ml-3">Help Almaty ₸ 15000</p></td>
-        </tr>
-        <tr>
-          <td><a class="btn" (click)="onDonations()" role="button">See more...</a></td>
+          <td><a class="btn" (click)="onDonations()" role="button">See all...</a></td>
         </tr>
         </tbody>
       </table>
