--- a/src/app/myprofile/mydonations/mydonations.component.html
+++ b/src/app/myprofile/mydonations/mydonations.component.html
@@ -10,7 +10,7 @@
       </thead>
       <tbody>
       <tr *ngFor="let donation of donations">
-        <td>Help Almaty</td>
+        <td>{{fundraisings.title}}</td>
         <td>₸ {{donation.donation}}</td>
       </tr>
       </tbody>
