--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,7 @@
       <li class="nav-item" *ngIf = '!_authService.loggedIn()'>
         <a class="nav-link" routerLink="/signin" routerLinkActive="active">Sign In</a>
       </li>
-      <li class="nav-item" *ngIf = "!_authService.loggedIn()">
+      <li class="nav-item" *ngIf = '!_authService.loggedIn()'>
         <a class="nav-link" routerLink="/signup" routerLinkActive="active">Sign Up</a>
       </li>
       <li class="nav-item" *ngIf = "_authService.loggedIn()">
