--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -5,21 +5,42 @@
                 <h2 class="mb-0 py-2">Sign In</h2>
             </div>
             <div class="card-body m-3">
-                <form class="form">
+                <form class="form" [formGroup]="loginForm">
                     <div class="form-group py-2">
-                        <input type="text" #emailRef="ngModel" required class="form-control"  placeholder="Email" name="email" [(ngModel)]="loginUserData.email">
-                        <div [hidden]="emailRef.valid || emailRef.pristine" class="alert alert-danger">Email is required</div>
+                      <input type="text" #emailRef required class="form-control"  placeholder="Email" name="email" [(ngModel)]="loginUserData.email" formControlName="emailRef" [ngClass]="{'is-invalid': loginForm.get('emailRef').touched && loginForm.controls['emailRef'].invalid}">
+                      <label class="text-danger" *ngIf="loginForm.get('emailRef').touched && loginForm.controls['emailRef'].hasError('required')">
+                        Email is required
+                      </label>
+                      <label class="text-danger" *ngIf="loginForm.controls['emailRef'].hasError('email')">
+                        Enter a valid email address
+                      </label>
                     </div>
                     <div class="form-group">
-                        <input type="password" #passRef="ngModel" required class="form-control" placeholder="Password" name="password" [(ngModel)]="loginUserData.password">
-                        <div [hidden]="passRef.valid || passRef.pristine" class="alert alert-danger">Password is required</div>
-                    </div>  
-                     <button (click)="loginUser()" type="button" class="btn btn-outline-info mt-4">Sign in to Kömek</button>                 
+                      <input type="password" #passRef required class="form-control" placeholder="Password" name="password" [(ngModel)]="loginUserData.password" formControlName="passRef" [ngClass]="{'is-invalid': loginForm.get('passRef').touched && loginForm.controls['passRef'].invalid}">
+                      <div *ngIf="loginForm.get('passRef').touched && loginForm.get('passRef').invalid" class="invalid-feedback">
+                        <label class="text-danger col" *ngIf="loginForm.controls['passRef'].hasError('required') || loginForm.controls['passRef'].hasError('minlength')">
+                          Must be at least 8 characters
+                        </label>
+                        <label class="text-danger col" *ngIf="loginForm.controls['passRef'].hasError('required') || loginForm.controls['passRef'].hasError('hasNumber')">
+                          Must contain at least 1 number
+                        </label>
+                        <label class="text-danger col" *ngIf="loginForm.controls['passRef'].hasError('required') || loginForm.controls['passRef'].hasError('hasCapitalCase')">
+                          Must contain at least 1 in Capital Case
+                        </label>
+                        <label class="text-danger col" *ngIf="loginForm.controls['passRef'].hasError('required') || loginForm.controls['passRef'].hasError('hasSmallCase')">
+                          Must contain at least 1 Letter in Small Case
+                        </label>
+                        <label class="text-danger col" *ngIf="loginForm.controls['passRef'].hasError('required') || loginForm.controls['passRef'].hasError('hasSpecialCharacters')">
+                          Must contain at least 1 Special Character
+                        </label>
+                      </div>
+                    </div>
+                     <button (click)="loginUser()" type="button" class="btn btn-outline-info mt-4">Sign in to Kömek</button>
                 </form>
             </div>
             <div class="card-footer bg-transparent">
                 <p class="text-center"><a href="#" class="text-danger">Forgot your password?</a></p>
-            </div>            
+            </div>
         </div>
     </div>
 </div>
