--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,3 +1,11 @@
 .text-center{
     font-size: small
 }
+.is-invalid {
+  border-left: solid 6px red;
+}
+
+.material-icons {
+  display: inline-flex;
+  vertical-align: middle;
+}
