--- a/src/app/myprofile/editpage/editpage.component.html
+++ b/src/app/myprofile/editpage/editpage.component.html
@@ -3,21 +3,21 @@
     <h1 class="py-3" style="text-align: center">Edit profile</h1>
     <hr class="pb-2" style="width: 80%">
     <div class="form-group d-flex justify-content-center">
-      <input type="file" class="form-control-file btn mb-4" name="image" id="photo" (change) = "selectImage($event)" [(ngModel)]="user.imagePath">
+      <input type="file" class="form-control-file btn mb-4" name="image" id="photo" (change)="selectImage($event)" [(ngModel)]="user.imagePath">
     </div>
     <div class="mx-3 pb-4">
       <form>
         <div class="form-group mb-5">
           <label for="firstname">First name</label>
-          <input required type="firstname" class="form-control" placeholder="Enter firstname" id="firstname" value="{{userData.firstname}}" [(ngModel)]="user.firstname">
+          <input required type="firstname" class="form-control" placeholder="Enter firstname" id="firstname" [value]="user.firstname" name="firstname" [(ngModel)]="user.firstname">
         </div>
         <div class="form-group mb-5">
           <label for="lastname">Last name</label>
-          <input required type="lastname" class="form-control" placeholder="Enter lastname" id="lastname" value="{{userData.lastname}}" [(ngModel)]="user.lastname">
+          <input required type="lastname" class="form-control" placeholder="Enter lastname" id="lastname" [value]="user.lastname" name="lastname" [(ngModel)]="user.lastname">
         </div>
         <div class="form-group mb-5">
           <label for="dateofbirth">Date of birth</label>
-          <input required type="dateofbirth" class="form-control" placeholder="Enter date of birth" id="dateofbirth" value="{{userData.birthday}}" [(ngModel)]="user.birthday">
+          <input required type="dateofbirth" class="form-control" placeholder="Enter date of birth" id="dateofbirth" [value]="user.birthday" name="birthday" [(ngModel)]="user.birthday">
         </div>
         <label>Gender</label>
         <div class="row mb-2 d-flex justify-content-center">
